--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/fontello.css">
-<!--     <link rel="stylesheet" href="/css/style.css"> -->
-    <link rel="stylesheet" href="https://github.com/stepienKacper/kacperstepien.github.io/tree/main/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="/js/script.js"></script>
 </head>
 <body>
