--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="fontello.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <div class="container">
-        <div class="item first"><a href="https://www.instagram.com" target="blank"><i class="icon-instagram"></i></a></div>
-        <div class="item second"><a href="https://www.facebook.com" target="blank"><i class="icon-facebook"></i></a></div>
-        <div class="item third"><a href="https://www.spotify.com"   target="blank"><i class="icon-spotify"></i></a></div>
-        <div class="item forth"><a href="https://www.twitter.com"   target="blank"><i class="icon-twitter"></i></a></div>
+        <div class="item first"><a href="https://www.instagram.com" target="blank"><img src="instagram.png" alt="instagram"></a></div>
+        <div class="item second"><a href="https://www.facebook.com" target="blank"><img src="facebook.png" alt="facebook"></a></div>
+        <div class="item third"><a href="https://www.spotify.com"   target="blank"><img src="spotify.png" alt="spotify"></a></div>
+        <div class="item forth"><a href="https://www.twitter.com"   target="blank"><img src="twitter.png" alt="twitter"></a></div>
     </div>
     <footer>2023 Kacper Stepien  &copy;</footer>
 </body>
